<resources>
    <string name="app_name">Student Enrollment App</string>
    <string name="login_title">SALUTARE</string>
    <string name="login_subtitle">Și bine te-am gasit. \nAutentifică-te aici să poți
        aplica imediat la universitațile dorite</string>
    <string name="login_txtEmail">Email</string>
    <string name="login_txtPassword">Parolă</string>
    <string name="login_btnSignIn">MĂ AUTENTIFIC</string>
    <string name="login_txtSignUp">Nu am cont încă. Vreau sa mă inregistrez</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_title">FORMULAR DE ÎNREGISTRARE</string>
    <string name="register_subtitle">Contul va fi activ imediat</string>
    <string name="register_txtName">Nume și prenume</string>
    <string name="register_txtEmail">Email</string>
    <string name="register_txtPassword">Parola</string>
    <string name="register_btnSignUp">MĂ ÎNREGISTREZ</string>
    <string name="register_txtAlreadyRegistered">Am deja cont. Vreau sa mă autentific</string>
    <string name="profile_update_title">Actualizează profil</string>
    <string name="profile_update_txtName">Nume si prenume</string>
    <string name="profile_update_txtEmail">Email</string>
    <string name="profile_update_txtPassword">Parolă</string>
    <string name="profile_update_txtEducation">Date școlare</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="university_list_title">Lista universiți</string>
    <string name="university_list_error_loading">Sunt erori la incarcarea datelor</string>
    <string name="item_search_university_text_search_field">Caută universitați</string>
    <string name="hint_search">caută universitați</string>
    <string name="error_failed_login">Autentificarea a eșuat</string>
</resources>
