<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/bg"
        tools:context=".ui.login.LoginActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_above="@id/input_group">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/login_title"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/login_subtitle"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="50dp"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <!-- Loading data display -->
            <RelativeLayout
                android:id="@+id/layout_display_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/login_progressbar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="8dp" />

                <TextView
                    android:id="@+id/error_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/margin_mini"
                    android:textColor="@color/red"
                    tools:text="@string/error_failed_login" />

            </RelativeLayout>


            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_top"
                android:hint="@string/login_txtEmail"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bottom"
                android:hint="@string/login_txtPassword"
                android:inputType="textPassword"
                android:padding="15dp" />


            <Button
                android:id="@+id/login_authenticate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/login_btnSignIn"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/login_signUp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:padding="10dp"
                android:text="@string/login_txtSignUp"
                android:textAllCaps="true"
                android:textSize="13dp"
                android:textStyle="bold"
                android:textColor="#FAD0E1"
                android:fontFamily="sans-serif"/>


        </LinearLayout>

    </RelativeLayout>
</FrameLayout>