<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1D25">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_profile_update"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_action_close"
                android:onClick="closeProfileUpdate"/>
            <TextView
                android:id="@+id/toolbar_profile_update_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="0dp"
                android:gravity="center_vertical|start"
                android:paddingLeft="16dp"
                android:paddingRight="4dp"
                android:textColor="#ffffff"
                android:text="@string/profile_update_title"
                android:textSize="18dp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_action_done"
                android:onClick="doneProfileUpdate"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar_profile_update"
        android:background="#1E1D23"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:gravity="center">
        <EditText
            android:id="@+id/profile_update_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:hint="@string/profile_update_txtName"
            android:background="@drawable/edit_text_top"
            android:padding="12dp"
            android:ems="10"
            android:singleLine="true"
            android:textColorHint="#CCCCCC"
            android:textColor="#666666"/>

        <EditText
            android:id="@+id/profile_update_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:hint="@string/profile_update_txtEmail"
            android:padding="12dp"
            android:focusable="false"
            android:background="@drawable/edit_text_middle"
            android:ems="10"
            android:singleLine="true"
            android:textColorHint="#CCCCCC"
            android:inputType="textEmailAddress"
            android:textColor="#666666"/>
        <EditText
            android:id="@+id/profile_update_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:hint="@string/profile_update_txtPassword"
            android:padding="12dp"
            android:focusable="false"
            android:background="@drawable/edit_text_middle"
            android:ems="10"
            android:singleLine="true"
            android:textColorHint="#CCCCCC"
            android:inputType="textPassword"
            android:textColor="#666666"/>

        <EditText
            android:id="@+id/profile_update_education"
            android:layout_width="match_parent"
            android:layout_height="433dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:background="@drawable/edit_text_bottom"
            android:ems="10"
            android:layout_gravity="center"
            android:gravity="top|left"
            android:inputType="textLongMessage|textMultiLine"
            android:padding="12dp"
            android:textColorHint="#CCCCCC"
            android:hint="@string/profile_update_txtEducation"/>
    </LinearLayout>

</RelativeLayout>